[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argis"
version = "0.1.0"
description = "Asynchronous username hunter with historical diff tracking across social platforms."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mohilisop" }]
keywords = ["osint", "username", "cli", "security", "async"]
dependencies = [
    "typer>=0.12.0",
    "httpx[http2]>=0.27.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/Mohilisop/argis"
Repository = "https://github.com/Mohilisop/argis"
Issues = "https://github.com/Mohilisop/argis/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
argis = "argis.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/argis"]

[tool.hatch.build.targets.wheel.force-include]
"src/argis/sites.json" = "argis/sites.json"

[tool.pytest.ini_options]
asyncio_mode = "auto"
